:lipstick: Correct spacing

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -28,13 +28,16 @@
 .home-info{
   position: absolute;
   top: 30%;
-  left: 10%;
+  padding-left: 50px;
+  // left: 10%;
 
   @media (max-width:1280px){
-    width: 100%;
-    height: 100%;
-    top: 0%;
-    left: 0%;
+    position: absolute;
+    // width: 100%;
+    // height: 100%;
+    top: 30%;
+    padding: 0 10%;
+    // left: 0%;
     display: flex;
     justify-content: end;
     align-items: center;
